test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_prefix_minus_op.draco
proc main() void : a := -a; corp;

