test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_bin_const_wrong_digit.draco
proc main() void : a := 0b12; corp;

